# test-backend-django-bot

./: Readme.md  pyproject.toml
bot/: Dockerfile  main.py  utils.py
bot/config/: settings.py
docker/: docker-compose.yaml
src/: .env_example  Dockerfile  entrypoint.sh
src/core/: settings.py  urls.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/users/management/commands/: create_superuser.py
src/users/migrations/: 0001_initial.py
